set default feed limit if not set and add a little padding to the right side on comment form until we work out how to fix the form overflowing feed-item container

--- a/client/sass/app/comment.scss
+++ b/client/sass/app/comment.scss
@@ -40,6 +40,7 @@
       @include entry-with-profile($picture-width: 4em);
 
       margin: 0.5em;
+      width: 95%;
       // height: emCalc(36px);
       // overflow: hidden;
 
